micronfig_macros/tests/sources/wrong_conversion_longfatarrow.stderr
error: expected `,`
 --> tests/sources/wrong_conversion_longfatarrow.rs:2:20
  |
2 |     GARASAUTO: String ==> u64,
  |                       ^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_conversion_longfatarrow.rs:7:19
  |
7 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
